Resolved some responsive elements and top navigation alignment

--- a/UniBit_CV/css/style.css
+++ b/UniBit_CV/css/style.css
@@ -85,3 +85,11 @@ ol li::marker {
     font-size: 1.5em;
    
 }
+
+
+thead, th {
+    white-space: normal !important; 
+    word-wrap: break-word;  
+    min-width: 60px;
+    max-width: 60px;
+  }
